# brain

./: .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .isort.cfg  Dockerfile  Dockerfile.prod  Makefile  README.md  UV_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251124_001_initial_schema.py
backend/src/: main.py
backend/src/api/: error_handlers.py  health.py  messages.py  sessions.py  stream.py
backend/src/config/: database.py  logging.py  session.py  settings.py
backend/src/models/: __init__.py  base.py  chart.py  message.py  session.py  user.py
backend/src/services/: conversation_service.py  deep_research_client.py  hybrid_conversation_service.py  langchain_agent.py  langchain_deep_research.py  langchain_llm.py  langchain_tools.py  mcp_client.py  message_service.py  session_service.py  sse_service.py
backend/src/utils/: auth.py
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/Chart/: ChartRenderer.tsx
frontend/src/components/Chat/: ChatContainer.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/History/: HistoryList.tsx  SessionCard.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
nginx/: nginx.conf
nginx/conf.d/: brain.conf
specs/001-agent-conversation-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-conversation-system/checklists/: requirements.md
specs/001-agent-conversation-system/contracts/: asyncapi.yaml  openapi.yaml
